# FitnessDRF

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bookings/: admin.py  models.py  parameters.py  permissions.py  schemas.py  serializers.py  urls.py  views.py
bookings/migrations/: 0001_initial.py
fitness_backend/: settings.py  urls.py
nginx/: default.conf
schedule/: admin.py  models.py  parameters.py  permissions.py  schemas.py  serializers.py  views.py
schedule/migrations/: 0001_initial.py
trainers/: admin.py  models.py  permissions.py  schemas.py  serializers.py  urls.py  views.py
trainers/migrations/: 0001_initial.py
users/: admin.py  models.py  schemas.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_birthday_user_gender_user_phone_number.py
