[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312'] # Укажите используемые версии Python
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv # <-- Добавьте явно, если не работает автоматически
  | _build
  | build
  | dist
  | env
  | venv # <-- Добавьте явно, если не работает автоматически
)/
'''
[project]
name = "fitness-drf-back"
version = "0.1.0"
description = "Fitness DRF API"
authors = [
    {name = "Eduard Malyautskiy",email = "eduard353@gmail.com"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "django (==5.2.4)",
    "django-environ (==0.12.0)",
    "djangorestframework (==3.16.0)",
    "djangorestframework-simplejwt (==5.5.0)",
    "drf-spectacular (==0.28.0)",
    "python-decouple (==3.8)",
    "psycopg2-binary (==2.9.10)",
    "drf-yasg (==1.21.10)",
    "gunicorn (>=23.0.0,<24.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
flake8 = "7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
